Changelog for haXigniter

Current
=======
Features
 - Added lastInsertId() to haxigniter.libraries.Database.
 - Added doc/mod_rewrite.conf, a template for Apache mod_rewrite

Bug fixes
 - Fixed a security hole in Neko session handler.

v0.52 (2009-08-29)
==================
Features
 - Added method for debugging, 
   haxigniter.libraries.config.Config.dumpEnvironment(). Can be run 
   automatically from the configuration file, see config/Config.hx.

Bug fixes
 - Fixed unit tests for Neko.

v0.51 (2009-08-28)
==================
Changed
 - Updated build scripts to handle paths and custom inclusions better.
 - REST action "destroy" now uses POST, not GET.
 - REST methods updated to handle extra arguments.
 - Request library now handles method and query.
 - Interface haxigniter.libraries.CustomRequest changed to accomodate the new Request structure.

Bug fixes
 - RttiUtils.getMethods() didn't handle CEnum and CTypedef.


v0.5 (2009-08-26)
=================
Features
 - First official release on github (http://github.com/ciscoheat/haxigniter)